Fixed user block collapse issue

--- a/app/static/select.css
+++ b/app/static/select.css
@@ -106,6 +106,7 @@ header > div > span {
     display: flex;    
     overflow-x: scroll;
     align-items: center;
+    height: 500px;
 }
 
 #add-user-button {
